working bgp config

--- a/lab6/sshInfo.conf
+++ b/lab6/sshInfo.conf
@@ -2,26 +2,44 @@
     {
         "name": "R1_DODD",
         "credentials": {
-            "username": "$USER",
-            "password": "$PASS"
+            "username": "steve",
+            "password": "dodd"
         },
-        "ip": {
-            "lo1": "10.10.10.1/32",
-            "lo2": "11.11.11.1/32",
-            "f0/0": "198.51.100.1/24"
+        "interface": {
+            "lo1": { 
+                "ip": "10.10.10.1",
+                "mask": "255.255.255.255"
+            },
+            "lo2": {
+                "ip": "11.11.11.1",
+                "mask": "255.255.255.255"
+            },
+            "f0/0": {
+                "ip": "198.51.100.1",
+                "mask": "255.255.255.0"
+            }
         }
     },
 
     {
         "name": "R2_DODD",
         "credentials": {
-            "username": "$USER",
-            "password": "$PASS"
+            "username": "steve",
+            "password": "dodd"
         },
-        "ip": {
-            "lo1": "20.20.20.1/32",
-            "lo2": "22.22.22.1/32",
-            "f0/0": "198.51.100.3/24"
+        "interface": {
+            "lo1": { 
+                "ip": "20.20.20.1",
+                "mask": "255.255.255.255"
+            },
+            "lo2": {
+                "ip": "22.22.22.1",
+                "mask": "255.255.255.255"
+            },
+            "f0/0": {
+                "ip": "198.51.100.3",
+                "mask": "255.255.255.0"
+            }
         }
     }
 ]
