--- a/lab6/bgp.conf
+++ b/lab6/bgp.conf
@@ -1,6 +1,5 @@
-[
-    {
-        "name": "R1_DODD",
+{
+    "R1_DODD": {
         "bgp": {
             "RouterID": "198.51.100.1",
             "LocalAS": "100",
@@ -9,15 +8,14 @@
                     "11.11.11.1/32"
                 ]
         },
-        "neighbor": {
-            "198.51.100.3": {
+        "neighbors": [
+            {
+                "ip": "198.51.100.3",
                 "RemoteAS": "100"
             }
-        }
+        ]
     },
-
-    {
-        "name": "R2_DODD",
+    "R2_DODD": {
         "bgp": {
             "RouterID": "198.51.100.3",
             "LocalAS": "100",
@@ -26,10 +24,11 @@
                     "22.22.22.1/32"
                 ]
         },
-        "neighbor": {
-            "198.51.100.1": {
+        "neighbors": [
+            {
+                "ip": "198.51.100.1",
                 "RemoteAS": "100"
             }
-        }
+        ]
     }
-]
+}
